objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalAirport__c</fullName>
        <label>ArrivalAirport</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalDateTime__c</fullName>
        <label>ArrivalDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepartureAirport__c</fullName>
        <label>DepartureAirport</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureDateTime__c</fullName>
        <label>DepartureDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FlightNumber__c</fullName>
        <label>FlightNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flight</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>